--- a/site1/Profile.html
+++ b/site1/Profile.html
@@ -1,23 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="site2.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="site2.css" rel="stylesheet" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
+    <div class="background">
+      <div class="header">
+        <div class="menu">
+          <ul>
+            <li><a href="lol.html" class="ativo">Home</a></li>
+            <li><a href="Profile.html" class="ativo2">Profile</a></li>
+            <li>
+              <a
+                href="https://signup.leagueoflegends.com/pt-br/signup/redownload?page_referrer=index"
+                >Download</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="box">
+        <form>
+          <h3>Cadastre-se</h3>
+          <label> name: </label>
+          <input type="text" />
+          <label> email: </label>
+          <input type="email" />
+          <label> password: </label>
+          <input type="password" required />
+          <label>hora:</label>
+          <input type="time" />
+          <label> Number: </label>
+          <input type="number" />
 
-    <header>
-        <nav class="menu">
-            <ul>
-                    <li><a href="lol.html" class="ativo">Home</a></li>
-                    <li><a href="Profile.html" class="ativo2">Profile</a></li>
-                    <li><a href="https://signup.leagueoflegends.com/pt-br/signup/redownload?page_referrer=index">Download</a></li>
-            </ul>
-        </nav>
-    </header>
-
-</body>
+          <div>
+            <button type="submit" onclick="(evt)=>evt.preventDefault()">Cadastrar</button>
+            <button type="reset">limpar</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </body>
 </html>
